--- a/wwwroot/css/teacher-funding-received.css
+++ b/wwwroot/css/teacher-funding-received.css
@@ -8,7 +8,6 @@
 }
 
 .ryts-9-welcome-panel {
-    width: 406px;
     height: 73px;
     margin-top: 0px;
     margin-left: 0px;
@@ -16,7 +15,7 @@
 }
 
 .ryts-9-greetings {
-    width: 406px;
+    width: 100%;
     height: 45px;
     font-size: 32px;
     font-weight: 700;
@@ -27,7 +26,6 @@
 
 .ryts-9-greeting-area {
     display: flex;
-    width: 406px;
     height: auto;
     gap: 10px;
 }
