--- a/Views/Shared/_NavbarPartial.cshtml
+++ b/Views/Shared/_NavbarPartial.cshtml
@@ -157,16 +157,9 @@
                     <div class="ogm-notify-panel">
                         <div class="ogm-notify-panel-inner">
                             <div id ="notificationContainer" class="ogm-details-area">
-                                <p class="ogm-day-time">Today<p />
-                                <div class="ogm-flex-words ogm-border-around">
-                                    <p>You sent money to Babatunde<br /> <span class="ogm-day-time">12:30pm</span> </p>
-                                    <p style="color:var(--Main-Primary-color, #34A853)">Claimed</p>
-                                </div>
+                                <!--<p class="ogm-day-time">Today<p />-->
 
-                                <p>You funded your wallet with N60,000<br /> <span class="ogm-day-time pt">12:30pm</span> </p>
-
-                                <p class="ogm-day-time pt-3">Yesterday</p>
-                                <p>You funded your wallet with N60,000 <br /> <span class="ogm-day-time pt">12:30pm</span> </p>
+                                <!--<p class="ogm-day-time pt-3">Yesterday</p>-->
 
                             </div>
 
