SL update in progress

--- a/Views/Account/TeacherSignUpStep2.cshtml
+++ b/Views/Account/TeacherSignUpStep2.cshtml
@@ -47,13 +47,13 @@
                         </select>
 
                     </div>
-                    <div class="ryts-11-input-main mb-3">
+                   @*  <div class="ryts-11-input-main mb-3">
                         <label for="upload-picture" class="mb-2">Upload NIN</label><br>
                         <input type="file" class="ryts-11-input" placeholder="Upload picture" name="NINUploadImage" asp-for="NINUploadImage">
                         <div class="ryts-11-icon">
                             <img src="~/Images/ryts-11-image-square.svg" alt="">
                         </div>
-                    </div>
+                    </div> *@
 
                     <button class="ryts-11-form-btn" type="submit">Sign Up</button>
                 </form>
