--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,14 +6,14 @@
 
 <body>
     <div style="background-color:#D9D6FE" class="ryt-display-container ryt-row ryt-padding-large">
-        <div class="ryt-col" style="width:50%;margin-top:75px;padding-left:60px">
+        <div class="ryt-col  animated bounceIn" style="width:50%;margin-top:75px;padding-left:60px">
             <div style="color:#3E1C96;font-weight:bold" class="ryt-xxxlarge">Send instant <br>heartfelt rewards<br>to your teachers</div><br>
             <div style="color:#101828;" class="ryt-margin-top">A digital platform that digitizes the process of sending funds to teachers who have done their work with emphatic kindness.</div>
             <a asp-action="signup" asp-controller="account">
             <span class="ryt-padding ryt-button ryt-margin-top" style="background-color:#6938EF;color:white"> Get Started</span>
             </a>
         </div>
-        <img class="ryt-col" style="width:50%;padding-right:2%;margin-bottom:-0.8%" src="~/images/hm1.png">
+        <img class="ryt-col  animated2 slideInRight" style="width:50%;padding-right:2%;margin-bottom:-0.8%" src="~/images/hm1.png">
     </div>
     <div style="margin-top:64px;margin-bottom:64px">
         <div class="ryt-center ryt-xxlarge ryt-margin-top" style="font-weight: bold">How it works</div>
