--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="~/css/RYTS-10-Setting-Logout-Appreciation-Modal.css" />
     <link rel="stylesheet" href="~/css/StudentProfileModal-ryts-2.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css//ResetPassword.css"/>
+    <link rel="stylesheet" href="~/css/animate.css"/>
 </head>
 <body>
   
