--- a/Views/Dashboard/Overview.cshtml
+++ b/Views/Dashboard/Overview.cshtml
@@ -1,22 +1,31 @@
 ﻿@model OverviewViewModel
-@inject UserManager<AppUser> _userManager;
 @{
     ViewData["Title"] = "Overview";
     var user = _userManager.GetUserAsync(User).Result;
-    var userRoles = _userManager.GetRolesAsync(user).Result;
+    IList<string> userRoles = new List<string>();
+    if (user != null)
+    {
+        userRoles = _userManager.GetRolesAsync(user).Result;
+    }
     string tableToShow = ViewBag.TableToShow;
+    var fundErr = ViewBag.FundErrMsg;
 }
 
 <Partial name="_FundingPartial" />
 <Partial name="_PaymentSDKGatewayPartial" />
 
-<div class="ryts-9-container-RYTS-9">
+<div class="ryts-9-container-RYTS-9 animated fadeIn">
     <div class="ryts-9-welcome-panel">
         <div id="ryts-9-greeting-area">
-            <div class="ryts-9-greetings">Good afternoon @if(user != null){ <span>@user.FirstName @user.LastName</span> },</div>
+            <div class="ryts-9-greetings">Good afternoon @if(user != null){ <span>@user.FirstName @user.LastName</span>},</div>
             <p id="ryts-9-greeting-area2">Welcome to your Dashboard <img id="ryts-9-emoji-image" src="/Images/ryts-9-emoji.png" /></p>
         </div>
     </div>
+
+    @if (!string.IsNullOrEmpty(fundErr))
+    {
+        <div>@fundErr</div>
+    }
 
     <div class="ryts-9-wallet-panel">
         <div class="ryts-9-balance-panel">
@@ -32,7 +41,7 @@
                 }
             </div>
             <div class="ryts-9-balance-area2">
-                <p id="ryts-9-funds-area">@Model.Balance</p>
+                <p id="ryts-9-funds-area" id="bal"><span>&#8358;</span>@Model.Balance</p>
                 @if (Model.Status.ToLower().Equals("active"))
                 {
                     <p id="ryts-9-active-area">@Model.Status</p>
@@ -47,7 +56,7 @@
                 <div class="ryts-9-inner-received-panel">
                     <div class="ryts-9-money-box">
                         <p id="ryts-9-total-money">Total money sent</p>
-                        <p id="ryts-9-total-money-area">@Model.AmountSent</p>
+                        <p id="ryts-9-total-money-area"><span>&#8358;</span>@Model.AmountSent</p>
                     </div>
                     <div class="ryts-9-button-area">
                         <img id="ryts-9-send-icon" src="/Images/ryt-9-icon.png" />
@@ -62,7 +71,7 @@
                 <div class="ryts-9-inner-received-panel">
                     <div class="ryts-9-money-box">
                         <p id="ryts-9-total-money">Total money received</p>
-                        <p id="ryts-9-total-money-area">@Model.AmountReceived</p>
+                        <p id="ryts-9-total-money-area"><span>&#8358;</span>@Model.AmountReceived</p>
                     </div>
                     <div class="ryts-9-button-area">
                         <img id="ryts-9-send-icon" src="/Images/ryt-9-icon.png" />
@@ -82,23 +91,39 @@
 
                         <div class="ryts-9-frame-1b">
 
-                            <a asp-action="overview" asp-route-tableToShow="fund" class="toggle-button active ryts-9-received">Funding</a>
+                            @if (tableToShow.ToLower().Equals("fund"))
+                            {
+                                <a asp-action="overview" asp-route-tableToShow="fund" class="toggle-button active ryts-9-received">Funding</a>
+
+                            }
+                            else
+                            {
+                                    <a asp-action="overview" asp-route-tableToShow="fund" class="toggle-button ryts-9-received">Funding</a>
+                            }
 
                             @* <div class="ryts-9-divider-1c"></div> *@
                         </div>
-                        <a asp-action="overview" asp-route-tableToShow="transfer" class="toggle-button ryts-9-sent">Transfer</a>
+                        @if (tableToShow.ToLower().Equals("transfer"))
+                        {
+                                    <a asp-action="overview" asp-route-tableToShow="transfer" class="toggle-button active ryts-9-sent">Transfer</a>
+                        }
+                        else
+                        {
+                            <a asp-action="overview" asp-route-tableToShow="transfer" class="toggle-button ryts-9-sent">Transfer</a>
+
+                        }
 
                     </div>
                     <div class="ryts-9-divider-1d"></div>
                 </div>
-                <table class="ryts-9-frame-1e" id="table1">
+                <table class="neo-table-container">
                     @if (tableToShow.ToLower().Equals("fund"))
                     {
                         <thead>
-                            <tr class="ryts-9-frame-1f">
-                                <th class="ryts-9-description-transfer">Description</th>
-                                <th class="ryts-9-amount-sent-transfer">Amount</th>
-                                <th class="ryts-9-date-time-transfer">Date/Time</th>
+                            <tr id="neo-table-head">
+                                <th>Description</th>
+                                <th>Amount</th>
+                                <th>Date/Time</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -112,10 +137,10 @@
                             {
                                 @foreach (var transaction in Model.MyFundings)
                                 {
-                                    <tr class="ryts-9-frame-20">
-                                        <td class="ryts-9-you-sent">@transaction.Description</td>
-                                        <td class="ryts-9-n-21-transfer">@transaction.Amount</td>
-                                        <td class="ryts-9-date-time-22-transfer">@transaction.CreatedOn</td>
+                                    <tr style="color:dimgray">
+                                        <td>@transaction.Description</td>
+                                        <td style="color:#34A853">+ <span>@transaction.Amount</span></td>
+                                        <td>@transaction.CreatedOn</td>
                                     </tr>
                                 }
                             }
@@ -124,15 +149,14 @@
                     @if (tableToShow.ToLower().Equals("transfer"))
                     {
                         <thead>
-                            <tr class="ryts-9-frame-1f">
-                                <th class="ryts-9-description-transfer">Name of teacher</th>
-                                <th class="ryts-9-description-transfer">School</th>
-                                <th class="ryts-9-amount-sent-transfer">Amount sent</th>
-                                <th class="ryts-9-date-time-transfer">Date/Time</th>
+                            <tr id="neo-table-head">
+                                <th>Name of teacher</th>
+                                <th>Amount sent</th>
+                                <th>Date/Time</th>
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Model?.MyFundings == null)
+                            @if (Model?.MyTransferTransactions == null)
                             {
                                 <tr>
                                     <td class="p-5" colspan="3">You have no funding transaction history yet</td>
@@ -140,12 +164,12 @@
                             }
                             else
                             {
-                                @foreach (var transaction in Model.MyFundings)
+                                @foreach (var transaction in Model.MyTransferTransactions)
                                 {
-                                    <tr class="ryts-9-frame-20">
-                                        <td class="ryts-9-you-sent">@transaction.Description</td>
-                                        <td class="ryts-9-n-21-transfer">@transaction.Amount</td>
-                                        <td class="ryts-9-date-time-22-transfer">@transaction.CreatedOn</td>
+                                    <tr style="color:dimgray">
+                                        <td>@transaction.NameOfTeacher</td>
+                                        <td style="color:red">- <span>@transaction.Amount</span></td>
+                                        <td>@transaction.dateTime</td>
                                     </tr>
                                 }
                             }
@@ -159,28 +183,44 @@
                     <div class="ryts-9-frame-1a">
 
                         <div class="ryts-9-frame-1b">
+                            @if (tableToShow.ToLower().Equals("received"))
+                            {
+                                <a asp-action="overview" asp-route-tableToShow="received" class="toggle-button active ryts-9-received">Received</a>
 
-                            <a asp-action="overview" asp-route-tableToShow="received" class="toggle-button active ryts-9-received">Received</a>
+                            }
+                            else
+                            {
+                                    <a asp-action="overview" asp-route-tableToShow="received" class="toggle-button ryts-9-received">Received</a>
 
+                            }
                             @* <div class="ryts-9-divider-1c"></div> *@
                         </div>
-                        <a asp-action="overview" asp-route-tableToShow="sent" class="toggle-button ryts-9-sent">Sent</a>
+                        @if (tableToShow.ToLower().Equals("sent"))
+                        {
+                                <a asp-action="overview" asp-route-tableToShow="sent" class="toggle-button active ryts-9-sent">Sent</a>
+
+                        }
+                        else
+                        {
+                                <a asp-action="overview" asp-route-tableToShow="sent" class="toggle-button ryts-9-sent">Sent</a>
+
+                        }
 
                     </div>
                     <div class="ryts-9-divider-1d"></div>
                 </div>
-                <table class="ryts-9-frame-1e" id="table1">
+                <table class="neo-table-container">
                 @if (tableToShow.ToLower().Equals("received"))
                 {
                     <thead>
-                        <tr class="ryts-9-frame-1f">
-                            <th class="ryts-9-description-transfer">Description</th>
-                            <th class="ryts-9-amount-sent-transfer">Amount</th>
-                            <th class="ryts-9-date-time-transfer">Date/Time</th>
+                        <tr id="neo-table-head">
+                            <th>Description</th>
+                            <th>Amount</th>
+                            <th>Date/Time</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @if (Model?.MyFundings == null)
+                        @if (Model?.MyReceivedTransactions == null)
                         {
                             <tr>
                                 <td class="p-5" colspan="3">You have no funding transaction history yet</td>
@@ -188,28 +228,28 @@
                         }
                         else
                         {
-                            @foreach (var transaction in Model.MyFundings)
+                            @foreach (var transaction in Model.MyReceivedTransactions)
                             {
-                                <tr class="ryts-9-frame-20">
-                                    <td class="ryts-9-you-sent">@transaction.Description</td>
-                                    <td class="ryts-9-n-21-transfer">@transaction.Amount</td>
-                                    <td class="ryts-9-date-time-22-transfer">@transaction.CreatedOn</td>
+                                <tr style="color:dimgray">
+                                    <td>@transaction.Description</td>
+                                    <td style="color:#34A853">+ <span>@transaction.Amount</span></td>
+                                    <td>@transaction.timeOfTransaction</td>
                                 </tr>
                             }
                         }
                     </tbody>
                 }
-                @if (tableToShow.ToLower().Equals("transfer"))
+                @if (tableToShow.ToLower().Equals("sent"))
                 {
                     <thead>
-                        <tr class="ryts-9-frame-1f">
-                            <th class="ryts-9-description-transfer">Description</th>
-                            <th class="ryts-9-amount-sent-transfer">Amount</th>
-                            <th class="ryts-9-date-time-transfer">Date/Time</th>
+                        <tr id="neo-table-head">
+                            <th>Description</th>
+                            <th>Amount</th>
+                            <th>Date/Time</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @if (Model?.MyFundings == null)
+                        @if (Model?.MySentTransactions == null)
                         {
                             <tr>
                                 <td class="p-5" colspan="3">You have no funding transaction history yet</td>
@@ -217,12 +257,12 @@
                         }
                         else
                         {
-                            @foreach (var transaction in Model.MyFundings)
+                            @foreach (var transaction in Model.MySentTransactions)
                             {
-                                <tr class="ryts-9-frame-20">
-                                    <td class="ryts-9-you-sent">@transaction.Description</td>
-                                    <td class="ryts-9-n-21-transfer">@transaction.Amount</td>
-                                    <td class="ryts-9-date-time-22-transfer">@transaction.CreatedOn</td>
+                                <tr style="color:dimgray">
+                                    <td>@transaction.Description</td>
+                                    <td style="color:red">- <span>@transaction.Amount</span></td>
+                                    <td>@transaction.timeOfTransaction</td>
                                 </tr>
                             }
                         }
