--- a/Views/Shared/_FundingPartial.cshtml
+++ b/Views/Shared/_FundingPartial.cshtml
@@ -1,37 +1,31 @@
-﻿@model OverviewViewModel
-@inject SignInManager<AppUser> _signInManager
-@inject UserManager<AppUser> _userManager
-@{
+﻿@{
     var user = _userManager.GetUserAsync(User).Result;
 }
 
+<Partial name="_SendRewardSuccessPartial" />
 <div class="modal fade" id="fund" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-body">
-
-
-
-
                 <div class="wey-fundWalletContainer mx-auto">
                     <div class="wey-fund-1">
                         <div class="wey-fundWalletFont"><p>Fund Wallet</p></div>
                         <div class="wey-fundExplain"><p>Use the details below to send money to your wallet.</p></div>
                     </div>
                     <div class="wey-fund-2">
-                        <form method="post" asp-controller="Payment" asp-action="FundWallet">
+                        
                              <div class="mb-3" hidden>
                                 <label for="userId" class="form-label wey-EnterAmount"></label>
-                                <input type="text" asp-for="@user.Id"form-control wey-input">
+                                <input type="text" id="userId" value="@user.Id"form-control wey-input">
                             </div> 
-                    @*         <div class="mb-3" hidden>
+                    @*         <div class="mb-3" hidden>label
                                 <label for="userId" class="form-label wey-EnterAmount"></label>
                                 <input type="text" asp-for="@user.Email" form-control wey-input">
                             </div> *@
                                                                                   
                             <div class="mb-3">
-                                <label for="EnterAmount" class="form-label wey-EnterAmount">Enter Amount</label>
-                                <input type="number" asp-for="FundingVM.Amount" placeholder="NGN 0.00" class="form-control wey-input" required>
+                                <label for="EnterAmount" class="form- wey-EnterAmount">Enter Amount</label>
+                                <input id="fundInput" placeholder="NGN 0.00" class="form-control wey-input">
                             </div>
                             <div class="dropdown">
                                 <label class="form-label wey-EnterAmount">Payment Type</label>
@@ -43,8 +37,11 @@
 
 
                             </div>
-                            <button class="btn btn-outline-light wey-fund-submit send-button button" href="#" role="button">Send</button>
-                        </form>
+                            <div class="loader-panel">
+                                <img class="hideItem" id="loader-img" src="~/Images/loader.gif" style="width:30px" />
+                            </div>
+                            <button id="btnFund" class="btn btn-outline-light wey-fund-submit send-button button" href="#" role="button">Send</button>
+                        
                     </div>
                 </div>
 
@@ -64,4 +61,56 @@
             color: white;
     }
 </style>
-                                    
+
+<script>
+
+    let userId = document.querySelector("#userId")
+    let fundInput = document.querySelector("#fundInput")
+    let btnFund = document.querySelector("#btnFund")
+
+
+    function removeFundLoader() {
+        fundInput.value = "";
+        btnFund.classList.remove("hideItem");
+        loader.classList.add("hideItem");
+    }
+    function showFundLoader() {
+        btnFund.classList.add("hideItem");
+        loader.classList.remove("hideItem");
+    }
+
+    btnFund.addEventListener("click", () => {
+
+        showFundLoader();
+        fetch(`FundWallet?amt=${fundInput.value}`,
+            {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
+            })
+            .then(res => res.json())
+            .then(data => {
+                let output = '';
+                if (data.code == "200") {
+                    window.location.href = data.message;
+                }
+                else if (data.code == "400") {
+                    output = `
+                    <div style="display:flex;">
+                    <i class="fa fa-exclamation-circle fa-2x" style="color:red;"></i>
+                    <p style="margin-left:20px;"> ${data.message} </p>
+                    </div>
+                    `;
+                    removeFundLoader();
+                }
+                document.getElementById('resultModalContent').innerHTML = output;
+
+                $("#withdraw").modal("hide")
+                $('#sendRewardSuccess').modal('show');
+            })
+            .catch()
+
+    })
+
+
+
+</script>                    
