--- a/Views/Shared/_NavbarPartial.cshtml
+++ b/Views/Shared/_NavbarPartial.cshtml
@@ -65,7 +65,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg" id="navbar_bg">
-        <div class="container">
+        <div class="container  animated fadeIn">
             
             <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNAV" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
                 <span class="navbar-toggler-icon"></span>
