--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using RYT.Data
 @using RYT.Models.Entities
 @using Microsoft.AspNetCore.Identity
+@inject UserManager<AppUser> _userManager;
+@inject SignInManager<AppUser> _signInManager;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
