--- a/Views/Dashboard/Messages.cshtml
+++ b/Views/Dashboard/Messages.cshtml
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="ryt-13-right_inner_container" style="width:80%; border:1px solid red">
+            <div class="ryt-13-right_inner_container" style="width:80%; border:1px solid white">
                 <div class="ryt-13-chat_area">
                     <div class="ryt-13-chat_container_right">
                         @if (Model == null || !Model.MessageThreads.Any())
